--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,42 @@
-.App {
+.nav {
+  width: 98%;
+  height: 60px;
+  border: solid 1px white;
+  margin-top: 5px;
+  box-shadow: 1px 1px 2px 2px rgb(202, 202, 204);
+  text-align: right;
+  margin-bottom: 3px;
+  margin-left: 8px;
+  margin-right: 8px;
+  padding-right: 10px;
+  border-radius: 9px;
+  text-decoration: none;
+  
+  /*  برای ثابت کردن هدر*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: white; 
+  margin: 0 auto; 
+  width: calc(100% - 20px); 
+}
+
+.nav a {
+  text-decoration: none;
+  margin: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: black;
+  font-size: 20px;
+}
+
+ .td{
   text-align: center;
+  margin-top: 64px;
+ }
+.App {
+  
   height: 100vh;
   background: #ffffff;
   overflow: hidden;
@@ -28,6 +65,7 @@
   border: 1px solid #ddd;
   border-radius: 4px;
   margin-top: 5px;
+
 }
 #liElem {
   width: 20%;
